--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
   <artifactId>Epam-Selenium-Practice-Group-5</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>18</maven.compiler.source>
+    <maven.compiler.target>18</maven.compiler.target>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.testng</groupId>
@@ -20,21 +26,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.1.0</version>
+    </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <release>11</release>
-          <compilerArgument>-parameters</compilerArgument>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
 
 </project>
