--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.3.0</version>
     </dependency>
+
+    <dependency><groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -28,13 +33,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
-        <configuration>
-          <release>11</release>
+        <configuration><release>11</release>
           <compilerArgument>-parameters</compilerArgument>
-        </configuration>
-      </plugin>
+        </configuration></plugin>
     </plugins>
   </build>
-
 
 </project>
