--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
       <artifactId>selenium-java</artifactId>
       <version>4.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.codeborne</groupId>
+      <artifactId>selenide</artifactId>
+      <version>6.7.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
