--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>18</maven.compiler.source>
     <maven.compiler.target>18</maven.compiler.target>
+    <allure.version>2.15.0</allure.version>
   </properties>
 
   <dependencies>
